changed the alignment and fixed responsive issue in document block

--- a/Gutenberg/src/document/style.scss
+++ b/Gutenberg/src/document/style.scss
@@ -13,7 +13,7 @@
 
 .embedpress-el-powered {
 	text-align: center;
-	margin-top: 0 !important;
+	margin-top: 10px !important;
 	font-size: 16px !important;
 	font-weight: 700;
 }
@@ -21,6 +21,9 @@
 [data-type="embedpress/document"] iframe{
 	margin: 0 auto;
     display: block;
+}
+.embedpress-embed-document {
+	max-width: 100%;
 }
 .embedpress-document-editmode .components-form-file-upload {
   display: none !important;
